Did the same style in requirements as explanation. Corrected text alignment in conteninfo

--- a/public_html/scss/style.scss
+++ b/public_html/scss/style.scss
@@ -365,15 +365,34 @@ header {
             grid-template-columns: 1fr 1fr 1fr;
             grid-template-rows: auto auto auto auto auto;
         }
-        p {
-            grid-column: 1 / 3;
-        }
-        :nth-child(1) {
-            grid-column-start: 3;
-            grid-row-start: 2;
-            align-self: end;
+        h3 {
+            grid-area: 2 / 3 / span 1 / span 1;
+            padding-bottom: 0;
+            align-self: center;
             justify-self: center;
         }
+        :nth-child(2) {
+            grid-area: 1 / 1 / span 1 / span 2;
+        }
+        :nth-child(3) {
+            grid-area: 2 / 1 / span 1 / span 2;
+        }
+        :nth-child(4) {
+            grid-area: 3 / 1 / span 1 / span 2;
+        }
+        :nth-child(5) {
+            grid-area: 4 / 1 / span 1 / span 2;
+        }        
+        &:before {
+            content: "";
+            width: 160%;
+            grid-area: 1 / 1 / span 4 / span 3;
+           -webkit-clip-path: polygon(57% 100%, 0 100%, 0 0, 57% 0, 100% 50%);
+            clip-path: polygon(57% 100%, 0 100%, 0 0, 57% 0, 100% 50%);
+            justify-self: center;
+            opacity: 0.5;
+            background-image: linear-gradient(-90deg, #ffd762, #086fb8);
+        }        
     }
 }
 
@@ -386,6 +405,7 @@ header {
       & {
          border-top: 1px solid $dark-grey;
          padding-top: 1em;
+         text-align: left !important;
       }
    }
 }
